--- a/client/js/components/tweet/tweet-style.scss
+++ b/client/js/components/tweet/tweet-style.scss
@@ -145,6 +145,7 @@ $tweet-background: #55ACEE;
     &:before {
       margin-right: 9px;
       font-size: 20px;
+      font-weight: 400;
       color: $font-tertiary;
       vertical-align: middle;
     }
