--- a/client/js/components/pin/pin-style.scss
+++ b/client/js/components/pin/pin-style.scss
@@ -13,13 +13,14 @@ $pin-section-margin: 15px;
   background-color: $pin-background;
   margin: 0 auto;
   padding: 20px;
-  width: 100%;
+  width: $fixed-post-width + 40px;
 }
 
 .pin-box {
   background-color: white;
   border: $pin-border-light;
   border-radius: $pin-border-radius;
+  box-shadow: 0 1px 2px -1px rgba(0, 0, 0, 0.3);
   box-sizing: border-box;
   position: relative;
   width: 100%;
