--- a/client/js/components/tumblr-post/tumblr-post-style.scss
+++ b/client/js/components/tumblr-post/tumblr-post-style.scss
@@ -1,5 +1,6 @@
 $tumblr-post-padding: 10px 20px;
 $tumblr-post-background: #36465D;
+$tumblr-font-color-notes: lighten($font-main, 20%);
 
 .tumblr-post-background {
   background-color: $tumblr-post-background;
@@ -73,6 +74,7 @@ $tumblr-post-background: #36465D;
   display: inline-block;
   font-size: 90%;
   font-weight: 700;
+  position: relative;
   vertical-align: middle;
 }
 
@@ -86,5 +88,69 @@ $tumblr-post-background: #36465D;
   .fa {
     margin-left: 15px;
     font-size: 22px;
+  }
+}
+
+.tumblr-post-notes-tooltip {
+  background: white;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 4px;
+  color: $tumblr-font-color-notes;
+  font-size: 95%;
+  font-weight: 400;
+  left: 50%;
+  padding: 10px;
+  position: absolute;
+  width: 360px;
+  z-index: 1;
+}
+
+.tumblr-post-notes-row {
+  $row-border: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: $row-border;
+  padding: 10px;
+
+  &:first-child {
+    border-top: $row-border;
+  }
+
+  & > img {
+    border-radius: 2px;
+    float: left;
+    margin-right: 7px;
+    height: 25px;
+    width: 25px;
+  }
+}
+
+.tumblr-post-notes-username {
+  font-weight: 700;
+
+  &:hover {
+    text-decoration: underline;
+  }
+  &:hover, &:active, &:link, &:visited {
+    color: $tumblr-font-color-notes;
+  }
+}
+
+.tumblr-post-note-content {
+  display: table-cell;
+  width: 1000px;
+
+  > i {
+    color: #55ACEE;
+    float: right;
+    font-size: 200%;
+  }
+}
+
+.tumblr-post-note-quote {
+  text-indent: 5px;
+
+  &:before {
+    color: lighten($font-tertiary, 15%);
+    content: "\007C  ";
+    font-size: 150%;
   }
 }
