--- a/client/js/components/tumblr-post/tumblr-post-template.jade
+++ b/client/js/components/tumblr-post/tumblr-post-template.jade
@@ -14,4 +14,13 @@
         i.fa.fa-ellipsis-h
         i.fa.fa-retweet
         i.fa.fa-heart
-      .tumblr-post-notes-count {{ vm.notesCount() }} notes
+      .tumblr-post-notes-count(ng-click='vm.showNotes = !vm.showNotes') {{ vm.post.timeline.length }} notes
+        .tumblr-post-notes-tooltip(ng-if='vm.showNotes')
+          .tumblr-post-notes-row.clearfix(ng-repeat='event in vm.post.timeline')
+            img(ng-src='{{ event.user.userImage }}')
+            .tumblr-post-note-content
+              i.fa.fa-plus-square
+              a.tumblr-post-notes-username(href='#') {{ event.user.username }}
+              span  {{ vm.translateAction(event.action) }}
+              span(ng-if='event.comment')  and added:
+              .tumblr-post-note-quote(ng-if='event.comment') {{ event.comment.message }}
